starting to make wordsmithing changes

--- a/test_accuracy_paper/dnns.bib
+++ b/test_accuracy_paper/dnns.bib
@@ -2942,6 +2942,13 @@
   year =      {2018},
 }
 
+@MISC{MM18_unpub_work,
+  author =    {C. H. Martin and M. W. Mahoney},
+  title =     {Unpublished Results.},
+  note =      {2018},
+}
+
+
 @TECHREPORT{ML18_TR,
   author =    {D. Masters and C. Luschi},
   title =     {Revisiting small batch training for deep neural networks},
