--- a/test_accuracy_paper/test_accuracy.tex
+++ b/test_accuracy_paper/test_accuracy.tex
@@ -104,7 +104,8 @@
 
 \title{%
 A Surprising Power Law Relationship Predicts Trends in the Test Accuracy for Very Deep Neural Networks
- OR A HTRMT REF
+\\ OR \\ 
+Heavy-Tailed Universality Predicts Surprising Trends in Test Accuracies for Deep Neural Networks
 }
 
 \author{%
